--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{ string lagoonNebulaText = "The Lagoon Nebula is a giant interstellar cloud in the constellation Sagittarius and is estimated to be between 4,000-6,000 light-years from the Earth. Credits: NASA, ESA, and STScI";}
+﻿@{ string lagoonNebulaText = "The Lagoon Nebula is a giant interstellar cloud in the constellation Sagittarius and is estimated to be 4,000-6,000 light-years from the Earth. Credits: NASA, ESA, and STScI";}
 
 <div id="particles-js" style="height:500px;"></div>
 
@@ -6,8 +6,8 @@
 <div>
     <ul class="collapsible">
         <li>
-            <div class="collapsible-header black"><i class="fas fa-arrow-alt-circle-down" style="color: #ff7733; font-size:30px; padding-top:5px;"></i>Lagoon Nebula</div>
-            <div class="collapsible-body"><span>@lagoonNebulaText</span></div>
+            <div class="collapsible-header black" style="font-size:20px;"><i class="fas fa-arrow-alt-circle-down" style="color: #ff7733; font-size:20px; padding-top:5px;"></i>Lagoon Nebula</div>
+            <div class="collapsible-body"><span style="font-size:17px;">@lagoonNebulaText</span></div>
         </li>
     </ul>
 </div>
@@ -19,7 +19,7 @@
 </div>
 
 <h3 style="text-align:center; margin-top:40px; font-weight:200; font-size:30px; letter-spacing:1.5px;">TECHNOLOGIES USED</h3>
-<div class="containter center-div"  style="margin-top:40px; margin-bottom:150px; text-align:center; width:55%; padding:10px; border: 4px dotted #81cac4;">
+<div class="containter center-div"  style="background-color:#050505; margin-top:40px; margin-bottom:150px; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
     <ul id="tech-used">
         <li>C#</li>
         <li>ASP.NET MVC</li>
