--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -13,7 +13,7 @@
                     <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4" a href="https://github.com/JordynRachelThompson/Website" target="_blank"><i class="fab fa-github" style="color:black"></i></a>
                 </div>
                 <div class="card-content black-text">
-                    <p>View the code for this site and the projects within it here...</p>
+                    <p>View the code for this website and past projects.</p>
                 </div>
             </div>
         </div>
@@ -21,12 +21,13 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/darkStars.jpg" />
-                    <span class="card-title" style="font-size:30px;">Budget App</span>
-                    <a href='@Url.Action("Index", "Budgets", new { userName = user })'class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="far fa-money-bill-alt" style="color:black"></i></a>
+                    <img src="~/images/painlessBudgetPic.png" />
+                    <span class="card-title" style="font-size:30px;"></span>
+                    <a href='@Url.Action("Index", "Budgets", new { userName = user })' class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="far fa-money-bill-alt" style="color:black"></i></a>
                 </div>
                 <div class="card-content black-text">
-                    <p>Some text explaining what it is will go here... Some text explaining what it is will go here...</p>
+                    <p><b>The Painless Budget:</b> An easy to use, functional budget with budget analytics and an option to export to Excel. ASP.NET Core, C#, 
+                        Materialize, Google Charts, jQuery, JavaScript</p>
                 </div>
             </div>
         </div>
