--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -2,9 +2,11 @@
 
 @{ string user = User.Identity.Name;}
 
+
 <div style="margin: 50px;">
     <h3 style="margin-top:100px; text-align:center;font-weight:200; padding-bottom:10px; letter-spacing:1.5px; border-bottom: 1px dotted #cfd8dc;">PROJECTS</h3>
     <div class="row">
+        @*GITHUB*@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
@@ -18,26 +20,30 @@
             </div>
         </div>
 
+        @*BUDGET*@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
                     <img src="~/images/painlessBudgetPic.png" />
                     <span class="card-title" style="font-size:30px;"></span>
-                    <a href='@Url.Action("Index", "Budgets", new { userName = user })' class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="far fa-money-bill-alt" style="color:black"></i></a>
+                    <a href='@Url.Action("Index", "Budgets")' class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="far fa-money-bill-alt" style="color:black"></i></a>
                 </div>
                 <div class="card-content black-text">
-                    <p><b>The Painless Budget:</b> An easy to use, functional budget with budget analytics and an option to export to Excel. ASP.NET Core, C#, 
-                        Materialize, Google Charts, jQuery, JavaScript</p>
+                    <p>
+                        <b>The Painless Budget:</b> An easy to use, functional budget with budget analytics and an option to export to Excel. ASP.NET Core, C#,
+                        Materialize, Google Charts, jQuery, JavaScript
+                    </p>
                 </div>
             </div>
         </div>
 
+        @*WEATHER*@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
                     <img src="~/images/darkStars.jpg" />
-                    <span class="card-title" style="font-size:30px;">Project Name</span>
-                    <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
+                    <span class="card-title" style="font-size:30px;">Weather</span>
+                    <a href='@Url.Action("Index", "Weather")' class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
                 <div class="card-content black-text">
                     <p>Some text explaining what it is will go here... Some text explaining what it is will go here...</p>
@@ -74,3 +80,10 @@
 </div>
 
 
+<style>
+    footer {
+        position: fixed;
+        width: 100%;
+        bottom: 0px !important;
+    }
+</style>
