--- a/MyWebsite/Views/Shared/_Layout.cshtml
+++ b/MyWebsite/Views/Shared/_Layout.cshtml
@@ -33,29 +33,13 @@
     @RenderBody()
     @RenderSection("Scripts", required: false)
 
-    @*<footer class="page-footer black" style="border-top: 1px solid #cfd8dc; border-bottom: 1px solid #cfd8dc;">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 style="color:#cfd8dc;">Footer Content</h5>
-                    <p style="color:#cfd8dc;">You can use rows and columns here to organize your footer content.</p>
-                </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 style="color:#cfd8dc;">Links</h5>
-                    <ul>
-                        <li><i class="fab fa-linkedin" style="font-size:35px;"></i><a style="color:#cfd8dc;" href="#!"></a></li>
-                        <li><i class="fab fa-github-square" style="font-size:35px;"></i><a style="color:#cfd8dc;" href="#!"></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>*@
     <footer >
         <div class="footer-copyright black" style="border-top: 1px solid #cfd8dc; border-bottom: 1px solid #cfd8dc;">
             <div class="container" style="color:#cfd8dc;">
                 <ul id="horizontal-list" class="center">
                     <li style="margin-right:20px;"> © 2018 Jordyn Thompson</li>
-                    <li><a style="color:#cfd8dc;" a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i class="fab fa-linkedin" style="font-size:35px;"></i></a></li>
-                    <li><a style="color:#cfd8dc;" a href="https://github.com/JordynRachelThompson/" target="_blank"><i class="fab fa-github-square" style="font-size:35px;"></i></a></li>
+                    <li><a style="color:#cfd8dc;" a href="https://www.linkedin.com/in/jordynrachelthompson/" target="_blank"><i id="footer-icon" class="fab fa-linkedin" style="font-size:35px;"></i></a></li>
+                    <li><a style="color:#cfd8dc;" a href="https://github.com/JordynRachelThompson/" target="_blank"><i id="footer-icon" class="fab fa-github-square" style="font-size:35px;"></i></a></li>
                     <li style="margin-left:20px;"><a style="color:#cfd8dc;" href="mailto:" jordyn@virtualzero.net">jordyn@virtualzero.net</a></li>
                 </ul>
             </div>
@@ -69,10 +53,14 @@
             vertical-align: middle;
         }
 
-            ul#horizontal-list li {
-                display: inline;
-                padding: 10px;
-            }
+        ul#horizontal-list li {
+            display: inline;
+            padding: 10px;
+        }
+
+        #footer-icon:hover{
+            color:white;
+        }
     </style>
 
     <environment>
